[tool.poetry]
name = "robocorp-vault"
version = "1.3.9"
description = "Robocorp Control Room Vault API integration library"
authors = [
	"Fabio Z. <fabio@robocorp.com>",
	"Ossi R. <ossi@robocorp.com>",
]
readme = "README.md"
repository = "https://github.com/robocorp/robocorp/"
license = "Apache-2.0"
packages = [{include = "robocorp", from="src"}]

[tool.poetry.dependencies]
python = "^3.9.2"
cryptography = ">=44.0.1,<46.0.0"
requests = "^2.32.3"
pyyaml = "^6.0"
tenacity = "^8.0.1"

[tool.poetry.group.dev.dependencies]
robocorp-devutils = {path = "../devutils/", develop = true}
mock = "^5.0"
types-requests = "^2.31"
types-mock = "^5.0"
types-PyYAML = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "src:tests"
