[tool.poetry]
name = "robocorp-vault"
version = "1.4.0"
description = "Robocorp Control Room Vault API integration library"
authors = ["Sema4.ai <dev@sema4.ai>"]
readme = "README.md"
repository = "https://github.com/robocorp/robocorp/"
license = "Apache-2.0"
packages = [{ include = "robocorp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = ">=46.0.5"
requests = ">=2.28.2"
pyyaml = "^6.0"
tenacity = ">=8.0.1"

[tool.poetry.group.dev.dependencies]
robocorp-devutils = { path = "../devutils/", develop = true }
mock = "^5.0"
types-requests = "^2.31"
types-mock = "^5.0"
types-PyYAML = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "src:tests"
