[tool.poetry]
name = "robocorp-workitems"
version = "1.4.7"
description = "Robocorp Work Items library"
authors = [
	"Fabio Z. <fabio@robocorp.com>",
	"Cosmin P. <cosmin@robocorp.com>",
]
readme = "README.md"
repository = "https://github.com/robocorp/robocorp/"
license = "Apache-2.0"
packages = [{include = "robocorp/workitems", from="src"}]

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "src:tests"

[tool.poetry.dependencies]
python = "^3.9.2"
robocorp-tasks = ">=1,<5"
requests = "^2.28.2"
tenacity = "^8.0.1"
dataclasses-json = "^0.6.1"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
robocorp-devutils = {path = "../devutils/", develop = true}
types-requests = "^2.30.0.0"
types-python-dateutil = "^2.8.19.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
