[tool.poetry]
name = "robocorp-workspace"
version = "0.1.0"
description = "Robocorp Control Room Workspace API client"
authors = [
	"Cosmin P. <cosmin@robocorp.com>",
]
readme = "README.md"
repository = "https://github.com/robocorp/robo/"
license = "Apache-2.0"
packages = [{include = "robocorp", from = "src"}]

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = "^2.0.7"
python-dateutil = "^2.8.2"
pydantic = "^2.4.2"  # FIXME(cmin764, 30 Oct 2023): Update to 2.x and fix templates.
aenum = "^3.1.15"

[tool.poetry.group.dev.dependencies]
robocorp-devutils = { path = "../devutils/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
extension-pkg-whitelist = "pydantic"
