[tool.poetry]
name = "robocorp-browser"
version = "0.2.0"
description = "Robocorp browser automation library"
authors = [
	"Ossi R. <ossi@robocorp.com>",
	"Fabio Z. <fabio@robocorp.com>",
	"Kerkko P. <kerkko@robocorp.com>",
    "Antero V. <antero@robocorp.com>",
]
readme = "README.md"
packages = [{include = "robocorp", from="src"}]

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.32.1"

[tool.poetry.group.dev.dependencies]
libs-devdeps = {path = ".."}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
