[tool.poetry]
name = "robocorp-http"
version = "0.1.0"
description = "Robocorp HTTP automation library"
authors = [
	"Ossi R. <ossi@robocorp.com>",
	"Fabio Z. <fabio@robocorp.com>",
	"Kerkko P. <kerkko@robocorp.com>",
    "Antero V. <antero@robocorp.com>",
]
readme = "README.md"
packages = [{include = "robo", from="src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
libs-devdeps = {path = "..", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
