[tool.poetry]
name = "robocorp-http"
version = "0.2.0"
description = "Robocorp HTTP automation library"
authors = [
	"Ossi R. <ossi@robocorp.com>",
	"Fabio Z. <fabio@robocorp.com>",
	"Kerkko P. <kerkko@robocorp.com>",
    "Antero V. <antero@robocorp.com>",
]
readme = "README.md"
packages = [{include = "robocorp", from="src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
libs-devdeps = {path = ".."}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
